@@ -1,9 +1,9 @@
 <?php
-class C implements ArrayAccess {}
-$v = new C;
+class C188 implements ArrayAccess {}
+$v = new C188;
 $v['key'] = 42;
-class E {
-    /** @var C */
+class E188 {
+    /** @var C188 */
     private $p;
     function f() {
         $this->p['key'] = 42;
